--- a/dasboard.html
+++ b/dasboard.html
@@ -17,7 +17,7 @@
 <div class="content">
     <h1>Mon QR code</h1>
   <p>QR permanent pour votre compte. Scannez-le : </p>
-  <img src="/screens/QR.png" alt="QR Code"><br><br>
+  <img src="./screens/QR.png" alt="QR Code"><br><br>
 
 
   <h2>Destination actuelle</h2>
